bugfix: fixed positioning issue with not hidden overflow

--- a/src/pages/about/AboutPage.scss
+++ b/src/pages/about/AboutPage.scss
@@ -6,6 +6,9 @@
   justify-content: flex-end;
   background-position: center;
   background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
 
   h3 {
     margin: 2rem 0 .5rem 0;
